# AdaptativeNeuralNetwork

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  setup.py.in
.cmake/: BuildType.cmake  CodeCoverage.cmake  ConfigChecks.cmake  Doxygen.cmake  FindGraphviz.cmake  FindPythonModule.cmake  cmake_uninstall.cmake.in  doxy-img.sh
.gitlab-ci/: deploy_aur.sh  deploy_doc.sh
Main/: CMakeLists.txt  main.c
Test/: CMakeLists.txt  main.c  test_models_PCFNN_backprop.c  test_models_PCFNN_batch.c  test_models_PCFNN_file.c  test_models_PCFNN_graph.c  test_models_PCFNN_layer.c  test_models_PCFNN_network.c  test_models_PCFNN_neuron.c  test_models_PCFNN_train.c
Test/PCFNN/: test_models_PCFNN_batch.c  test_models_PCFNN_feedforward.c  test_models_PCFNN_graph.c  test_models_PCFNN_network.c
doc/models/PCFNN/: README.md
include/ANN/: ANN.h  CMakeLists.txt  config.h.in  tools.h  version.h.in
include/ANN/models/CNN/: CNN.h  filter.h
include/ANN/models/PCFNN/: PCFNN.h  README.md  backprop.h  batch.h  feedforward.h  file.h  graph.h  layer.h  network.h  neuron.h  train.h
pkgconf/: ANN.pc.in
python/: CMakeLists.txt  setup.py.in
python/pyann/: CMakeLists.txt  __init__.py  pyann_low.i
src/: ANN.c  CMakeLists.txt  tools.c
src/ANN/: CMakeLists.txt  tools.c  tools.h
src/ANN/core/: layer.h  neuron.c  neuron.h
src/ANN/models/CNN/: README.md  layer.c  layer.h  network.c  network.h  neuron.c  neuron.h
src/ANN/models/PCFNN/: backprop.c  backprop.h  batch.c  batch.h  feedforward.c  file.c  layer.c  layer.h  network.c  network.h  neuron.c  neuron.h  train.c
src/Main/: CMakeLists.txt  main.c
src/Test/: CMakeLists.txt  main.c  test.c  test_core_neuron.c  test_models_CNN__neuron.c  test_models_CNN_layer.c  test_models_CNN_neuron.c  test_models_PCFNN_backprop.c  test_models_PCFNN_batch.c  test_models_PCFNN_file.c  test_models_PCFNN_layer.c  test_models_PCFNN_network.c  test_models_PCFNN_neuron.c  test_models_PCFNN_train.c
src/models/CNN/: filter.c
src/models/PCFNN/: backprop.c  batch.c  feedforward.c  file.c  graph.c  layer.c  network.c  neuron.c  train.c
